--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   },
   "streams": {
     "demo1": {
-      "url": "rtsp://171.25.232.15/f7404d80f4a14ffe93ba72c72523920d"
+      "url": "rtsp://10.1.2.53:554/user=admin&password=&channel=1&stream=0.sdp?real_stream--rtp-caching=100"
     }
   }
 }
